RESOLVED FIXED163492
REGRESSION (r191699): Contextual menu in Mail compose view doesn’t include any of the standard submenus
https://bugs.webkit.org/show_bug.cgi?id=163492
Summary REGRESSION (r191699): Contextual menu in Mail compose view doesn’t include an...
mitz
Reported 2016-10-15 15:30:35 PDT
<rdar://problem/28654799> After <https://trac.webkit.org/r191699>, WebKit is not setting the tag on contextual menu items that have submenus.
Attachments
Set the tag on menu items that have submenus (9.68 KB, patch)
2016-10-15 16:00 PDT, mitz
darin: review+
mitz
Comment 1 2016-10-15 15:33:58 PDT
Patch forthcoming.
mitz
Comment 2 2016-10-15 16:00:16 PDT
Created attachment 291729 [details] Set the tag on menu items that have submenus
Darin Adler
Comment 3 2016-10-15 16:27:16 PDT
Comment on attachment 291729 [details] Set the tag on menu items that have submenus But items with submenus can’t have a checked state or a target?
mitz
Comment 4 2016-10-15 16:56:44 PDT
Note You need to log in before you can comment on or make changes to this bug.