REGRESSION (r191699): Contextual menu in Mail compose view doesn’t include any of the standard submenus https://bugs.webkit.org/show_bug.cgi?id=163492 <rdar://problem/28654799>

Reviewed by Darin Adler.

Source/WebKit/mac:

Test: TestWebKitAPI/Tests/mac/ContextMenuDefaultItemsHaveTags.mm

* WebView/WebHTMLView.mm:
(createMenuItem): Set the tag for items that have submenus as well.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/ContextMenuDefaultItemsHaveTags.mm: Added.
(-[ContextMenuDefaultItemsHaveTagsDelegate webView:didFinishLoadForFrame:]):
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/181303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207385 268f45cc-cd09-0410-ab3c-d52691b4dbfc